--- a/npc-index/npc-pages/ember-desert/ilyen-starroot.html
+++ b/npc-index/npc-pages/ember-desert/ilyen-starroot.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ilyen Starroot – Songs of Sand and Succulents</title>
+  <link rel="stylesheet" href="../../../styles/fonts.css" />
+  <link rel="stylesheet" href="../../../styles/global.css" />
+  <link rel="stylesheet" href="../../../styles/npc-index.css" />
+</head>
+<body>
+  <div class="container">
+    <h1 class="npc-title">Ilyen Starroot – Songs of Sand and Succulents</h1>
+    <br>
+    <section class="npc-story">
+      <p>Born beneath the silver-blooming trees of the Celestial Highlands, where the spires of the Citadel glimmered like the bones of ancient stars, Ilyen's early life was bathed in moonlight and method, each day scripted by alchemical routines and the rigid expectations of her tutors. She excelled quickly—too quickly. By the time she reached the higher halls of study, she found herself surrounded by minds slower than hers and rules tighter than any flask seal.</p>
 
+      <p>So she left.</p>
+
+      <p>Without ceremony or bitterness, Ilyen simply wandered off one dawn, barefoot and humming, her pack light and her heart lighter. She traveled first to the Ironwood, where the trees whispered secrets older than her tutors dared admit. Then, following a rumor about flowers that bloomed only in firelight, thorns that dripped with sleep-oil, and cacti that oozed laughter inducing sap, she crossed into the Ember Desert.</p>
+
+      <p>There, something clicked.</p>
+
+      <p>The sun. The sand. The slow hush of the wind combing through dunes. The way the plants fought to live—and did so beautifully. She fell in love with it. Not with a person, not with a philosophy, but with the wild, impossible audacity of the desert to bloom.</p>
+
+      <p>And so she followed it.</p>
+
+      <p>These days, Ilyen can be found wandering barefoot across the Ember Desert, softly singing to herself as she stoops to examine tiny blossoms growing from cracks in the stone. Her arms are always full of strange herbs—glow-leaf, dusk-thistle, shimmercress, and others unnamed and perhaps unnamable.</p>
+
+      <p>She is one of the finest herbalists and alchemists in the realms, despite having no formal title or degree. Her concoctions range from legendary healing salves to chaotic little vials of bubbling mischief she swears are “probably not lethal.”</p>
+
+      <p>Her stall in Khazad al Sahra, the open-air bazaar at the heart of Ember Spire, is a colorful mess. Potions dangle like windchimes. Incense curls from jars shaped like frogs. A cactus once grew legs and tried to escape mid-transaction. She gave chase, laughing the whole way.</p>
+
+      <p>Locals adore her. Travelers seek her out with reverence or curiosity. Nobles whisper her name in hopes of acquiring something “untraceably effective.”</p>
+
+      <p>But Ilyen? She just smiles, offers you a drink that might make you dream in music, and disappears again into the dunes, barefoot and singing, where the plants call her by name.</p>
+    </section>
+    <hr>
+    <h2 class="npc-title">Of Humming Tunes and Shared Roots</h2>
+    <br>
+    <section class="npc-story">
+      <p>It began with a tune.</p>
+
+      <p>Shade had passed by the stall many times. Ilyen Starroot was a reliable source of strange ingredients, unmarked brews, and incense that either calmed the nerves or made you speak fluent gibberish for hours. Most called her strange. Some called her brilliant. Shade called her useful.</p>
+
+      <p>But this time, Shade wasn’t alone.</p>
+
+      <p>Zostara lingered a step behind, letting her friend haggle over powdered fireblossom and a vial of glowing spore extract. Her attention wasn’t on the trade, but on the faint melody threading through the bazaar’s bustle. Ilyen hummed as she worked, barefoot as always, her toes nestled in sun-warmed sand, a wreath of dried herbs tangled in her silver-streaked hair.</p>
+
+      <p>Zostara knew the tune.</p>
+
+      <p>It wasn’t common here in Ember Desert, or any other continent of the material world at all, far from the whispering shores of the Twilight Isles. But the melody rang clear in her memory, a lullaby once sung on wind-charmed balconies, where night-blooms opened to moonlight.</p>
+
+      <p>"Where did you learn that song?" Zostara asked.</p>
+
+      <p>Ilyen looked up, blinking. "This one? Oh, just a little thing I picked up. A bard passed through a while back, sang it like the stars were listening. I thought it quite catchy."</p>
+
+      <p>Zostara smiled. "It’s from my home."</p>
+
+      <p>"Well then," Ilyen said brightly, handing her a flask of something fizzy and fuchsia, "you’ve got good taste in home and in harmonies."</p>
+
+      <p>That was all it took.</p>
+
+      <p>They spent hours talking. About the Citadel, about the professors who droned on like drying paint, about recipes both magical and culinary. Ilyen, who had wandered out of academia in search of more fragrant horizons. Zostara, who had danced between structure and spirit all her life.</p>
+
+      <p>Shade watched with her usual quiet observation. She knew Ilyen, but only in the way most people did: a transactional connection with the occasional cryptic charm thrown in. But Zostara saw more.</p>
+
+      <p>Saw the mirth behind the murmurs. The brilliance behind the barefoot strolls.</p>
+
+      <p>By the end of the day, Zostara had a pouch full of potions, a new friend, and a vow to return.</p>
+
+      <p>And Ilyen? She had someone to share her desert blooms with.</p>
+
+      <p>Not everything had to be brewed in glass and fire.</p>
+
+      <p>Some bonds grew like wildflowers—unexpected, untrimmed, and perfectly timed.</p>
+    </section>
+  </div>
+</body>
+</html>
