--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
   <html lang="en">
     <head>
       <title>Known NPC List</title>
-      <meta charset="utf-8" />
+      <meta charset="UTF-8" />
       <meta
         name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no"
