--- a/npc-index/npc-pages/ember-desert/ragor-flintskin.html
+++ b/npc-index/npc-pages/ember-desert/ragor-flintskin.html
@@ -13,7 +13,7 @@
     <h1 class="npc-title">Ragor Flintskin – The Blade That Broke the Dust</h1>
     <br>
     <section class="npc-story">
-      <p>Ragor Flintskin was born in the dry crook of nowhere, in the cracked lands of the northeast Ember Desert...</p>
+      <p>Ragor Flintskin was born in the dry crook of nowhere, in the cracked lands of the northeast Ember Desert. His childhood was stitched together with dust, grit, and the stubborn heartbeat of survival. His family lived in a battered hut right on the beach, eking out a life from what little the desert allowed. They hunted sandhares and desert fowl, fished for food and for fun, farmed cactus fruit and bloodroot, and built their lives from patience and pain.</p>
 
       <p>But they loved him fiercely. What they lacked in gold, they gave in stories, discipline, and pride. His mother taught him to skin a razorbeak before he could read. His father showed him how to track by starlight. And though he was half-orc, a bloodline despised by many, they never once let him feel less.</p>
 
