--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -105,7 +105,7 @@
   <tr><td><a href="npc-pages/empire-of-tides/captain-maxwell.html" target="_blank">Captain Maxwell</a></td><td>Sea Captain/Pirate Lord</td><td>Tabaxi</td><td>Flashy, reckless, obsessed with treasure and theatrics</td></tr>
 </table>
 
-<h2 class="npc-ref-place">Ember Deserts</h2>
+<h2 class="npc-ref-place">Ember Desert</h2>
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/ember-desert/tolla-jinxfuse.html" target="_blank">Tolla Jinxfuse</a></td><td>Tinkerer</td><td>Gnome</td><td>Explosive and eccentric</td></tr>
