--- a/npc-index/npc-pages/eltoria/dorus-kel.html
+++ b/npc-index/npc-pages/eltoria/dorus-kel.html
@@ -41,10 +41,10 @@
 
       <p>But he walks the line between life and death like someone who knows both personally.</p>
 
-      <p>And in a way, he does.  
-      He’s grown them. Watered them.  
-      Buried them.  
-      And sold them by the bundle.</p>
+      <p>And in a way, he does.</p>  
+      <p>>He’s grown them. Watered them.</p>
+      <p>Buried them.</p>  
+      <p>And sold them by the bundle.</p>
     </section>
     <hr>
     <h2 class="npc-title">Of Thorny Deals and Bitter Roots</h2>
