--- a/npc-index/npc-pages/eltoria/dorus-kel.html
+++ b/npc-index/npc-pages/eltoria/dorus-kel.html
@@ -78,11 +78,11 @@
 
       <p>Whenever she returned, he had something waiting—elixirs that saved her life, poisons that ended others’. Shade never asked how he knew what she’d need. Dorus never asked why she needed it.</p>
 
-      <p>Their trade was rooted in deeper soil than trust.  
-      It was mutual understanding. A shared respect for the delicate balance between death and necessity.</p>
+      <p>Their trade was rooted in deeper soil than trust.</p>
+      <p>It was mutual understanding. A shared respect for the delicate balance between death and necessity.</p>
 
-      <p>And besides, she’d once called his poison shelf “poetry in glass.”  
-      He’d never admit it, but that meant a great deal.</p>
+      <p>And besides, she’d once called his poison shelf “poetry in glass.”</p>
+      <p>He’d never admit it, but that meant a great deal.</p>
     </section>
   </div>
 </body>
