--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -78,6 +78,7 @@
   <h1 class="npc-ref-title">NPCs of Vaeloria</h1>
 
 <h2 class="npc-ref-place">Celestial Highlands</h2>
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/celestial-highlands/tharn-vellmor.html" target="_blank">Tharn Vellmor</a></td><td>Exiled Noble</td><td>Half-Elf</td><td>Elegant, calculating</td></tr>
@@ -85,8 +86,11 @@
   <tr><td><a href="npc-pages/celestial-highlands/ilreth-solshade.html" target="_blank">Ilreth Solshade</a></td><td>Historian of Lost Myths</td><td>Kalashtar</td><td>Speaks in metaphor</td></tr>
   <tr><td><a href="npc-pages/celestial-highlands/yethryn-dorr.html" target="_blank">Yethryn Dorr</a></td><td>Sky Archivist</td><td>Elf</td><td>Maps skies for prophecy</td></tr>
 </table>
+</div>
 
 <h2 class="npc-ref-place">Twilight Isles</h2>
+  
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/twilight-isles/kaelen-duskwind.html" target="_blank">Kaelen Duskwind</a></td><td>Cartographer</td><td>Kalashtar</td><td>Poetic, stargazer</td></tr>
@@ -95,8 +99,10 @@
   <tr><td><a href="npc-pages/twilight-isles/velka-aresk.html" target="_blank">Velka Aresk</a></td><td>Grave-Scribe</td><td>Shadar-Kai</td><td>Tattoos names of the dead</td></tr>
   <tr><td><a href="npc-pages/twilight-isles/vaela-raen.html" target="_blank">Vaela Raen</a></td><td>Moon Priestess</td><td>Kalashtar</td><td>Soft voice, moon magic</td></tr>
 </table>
-
+</div>
+  
 <h2 class="npc-ref-place">Empire of Tides</h2>
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/empire-of-tides/captain-yorra-vayne.html" target="_blank">Captain Yorra Vayne</a></td><td>Skyship Pirate</td><td>Human</td><td>Flamboyant ex-noble</td></tr>
@@ -104,8 +110,10 @@
   <tr><td><a href="npc-pages/empire-of-tides/fenra-veln.html" target="_blank">Fenra Veln</a></td><td>Shield-Maker</td><td>Human</td><td>Protective, hates war</td></tr>
   <tr><td><a href="npc-pages/empire-of-tides/captain-maxwell.html" target="_blank">Captain Maxwell</a></td><td>Sea Captain/Pirate Lord</td><td>Tabaxi</td><td>Flashy, reckless, obsessed with treasure and theatrics</td></tr>
 </table>
-
+</div>
+  
 <h2 class="npc-ref-place">Ember Desert</h2>
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/ember-desert/tolla-jinxfuse.html" target="_blank">Tolla Jinxfuse</a></td><td>Tinkerer</td><td>Gnome</td><td>Explosive and eccentric</td></tr>
@@ -120,24 +128,30 @@
   <tr><td><a href="npc-pages/ember-desert/yanni-kelso.html" target="_blank">Yanni "The Ember Rat" Kelso</a></td><td>Street Kid Turned Boss</td><td>Halfling</td><td>Sharp, fast-talking, runs the slums of Ozar’teth</td></tr>
   <tr><td><a href="npc-pages/ember-desert/orama-tal.html" target="_blank">Ora'ma Tal</a></td><td>Flame-Touched Oracle</td><td>Dragonborn</td><td>Mutters prophecy through cracked lips—fire dances in her eyes</td></tr>
 </table>
+</div>
 
 <h2 class="npc-ref-place">Eltoria</h2>
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/eltoria/hett-mosswick.html" target="_blank">Hett Mosswick</a></td><td>Apothecary</td><td>Firbolg</td><td>Speaks with plants</td></tr>
   <tr><td><a href="npc-pages/eltoria/kess-talren.html" target="_blank">Kess Tal’Ren</a></td><td>Healer</td><td>Human</td><td>Stern, wise</td></tr>
   <tr><td><a href="npc-pages/eltoria/dorus-kel.html" target="_blank">Dorus Kel</a></td><td>Blight Farmer</td><td>Halfling</td><td>Morbid, death-crop grower</td></tr>
 </table>
+</div>
 
 <h2 class="npc-ref-place">Eldara</h2>
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/eldara/vess-talorin.html" target="_blank">Vess Talorin</a></td><td>Arcane Scholar</td><td>Elf</td><td>Sharp-tongued, loyal</td></tr>
   <tr><td><a href="npc-pages/eldara/brenn-talveth.html" target="_blank">Brenn Talveth</a></td><td>Librarian/Seer</td><td>Half-Elf</td><td>Lost eye to a cursed tome</td></tr>
   <tr><td><a href="npc-pages/eldara/lira-solmere.html" target="_blank">Lira Solmere</a></td><td>Crystal Alchemist</td><td>Elf</td><td>Speaks in riddles</td></tr>
 </table>
+</div>
 
 <h2 class="npc-ref-place">Trade Cities</h2>
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/trade-cities/mazrik-vallo.html" target="_blank">Mazrik "The Coin" Vallo</a></td><td>Merchant Lord</td><td>Human</td><td>Funds both sides</td></tr>
@@ -147,8 +161,10 @@
   <tr><td><a href="npc-pages/trade-cities/korran-dirge.html" target="_blank">Korran Dirge</a></td><td>Doom-Bard</td><td>Half-Orc</td><td>Sings death’s arrival</td></tr>
   <tr><td><a href="npc-pages/trade-cities/tarnel-verin.html" target="_blank">Tarnel Verin</a></td><td>Silent Courier</td><td>Half-Elf</td><td>Delivers, never speaks</td></tr>
 </table>
+</div>
 
 <h2 class="npc-ref-place">Unknown / Wandering</h2>
+<div class="table-responsive">
 <table class="npc-table">
   <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/unknown-wandering/ilvara-sunsheen.html" target="_blank">Ilvara Sunsheen</a></td><td>Bard</td><td>Elf</td><td>Sings secrets, beautiful</td></tr>
@@ -156,6 +172,7 @@
   <tr><td><a href="npc-pages/unknown-wandering/malric-gorr.html" target="_blank">Malric &quot;Three-Tooth&quot; Gorr</a></td><td>Pit Fighter</td><td>Orc</td><td>Loves poetry, loud</td></tr>
   <tr><td><a href="npc-pages/unknown-wandering/arvyn-drehl.html" target="_blank">Arvyn Drehl</a></td><td>Ex-Ashen Covenant</td><td>Elf</td><td>Haunted, false name</td></tr>
 </table>
+</div>
 </body>
 <script
   src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
