--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -104,7 +104,7 @@
 <h2 class="npc-ref-place">Empire of Tides</h2>
 <div class="table-responsive">
 <table class="npc-table">
-  <tr><th>Name</th><th>Role</th><th>Race</th><th class="nowrap">Vibe</th></tr>
+  <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/empire-of-tides/captain-yorra-vayne.html" target="_blank">Captain Yorra Vayne</a></td><td>Skyship Pirate</td><td>Human</td><td>Flamboyant ex-noble</td></tr>
   <tr><td><a href="npc-pages/empire-of-tides/gravik-irontide.html" target="_blank">Gravik Irontide</a></td><td>Pirate Quartermaster</td><td>Dwarf</td><td>Gruff, drinks ink</td></tr>
   <tr><td><a href="npc-pages/empire-of-tides/fenra-veln.html" target="_blank">Fenra Veln</a></td><td>Shield-Maker</td><td>Human</td><td>Protective, hates war</td></tr>
@@ -115,7 +115,7 @@
 <h2 class="npc-ref-place">Ember Desert</h2>
 <div class="table-responsive">
 <table class="npc-table">
-  <tr><th>Name</th><th>Role</th><th>Race</th><th class="nowrap">Vibe</th></tr>
+  <tr><th>Name</th><th>Role</th><th>Race</th><th>Vibe</th></tr>
   <tr><td><a href="npc-pages/ember-desert/tolla-jinxfuse.html" target="_blank">Tolla Jinxfuse</a></td><td>Tinkerer</td><td>Gnome</td><td>Explosive and eccentric</td></tr>
   <tr><td><a href="npc-pages/ember-desert/nirra-glintstream.html" target="_blank">Nirra Glintstream</a></td><td>Cook</td><td>Halfling</td><td>Joy-magic comfort food</td></tr>
   <tr><td><a href="npc-pages/ember-desert/quen-maddrek.html" target="_blank">Quen Maddrek</a></td><td>Demolitionist</td><td>Gnome</td><td>Explodes, then explains</td></tr>
