--- a/guilds-index/guilds-index.html
+++ b/guilds-index/guilds-index.html
@@ -12,7 +12,7 @@
   />
   <link rel="stylesheet" href="../styles/fonts.css" />
   <link rel="stylesheet" href="../styles/global.css" />
-  <link rel="stylesheet" href="../styles/dplore-index.css" />
+  <link rel="stylesheet" href="../styles/guilds-index.css" />
 </head>
 
 <body>
