--- a/players-index/players-index.html
+++ b/players-index/players-index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Vaeloria Info Hub</a>
+        <a class="navbar-brand" href="#">Player Characters</a>
         <button
           class="navbar-toggler"
           type="button"
