--- a/notes-journals-index/notes-index.html
+++ b/notes-journals-index/notes-index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Notes, Journals & Books</a>
+        <a class="navbar-brand" href="#">Notes & Journals</a>
         <button
           class="navbar-toggler"
           type="button"
