--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 Lore & Features
               </a>
               <ul class="dropdown-menu" aria-labelledby="loreDropdown">
-                <li><a class="dropdown-item" href="#">Locations</a></li>
-                <li><a class="dropdown-item" href="#">Player Characters</a></li>
+                <li><a class="dropdown-item" href="locations-index/locations-index.html">Locations</a></li>
+                <li><a class="dropdown-item" href="players-index/players-index.html">Player Characters</a></li>
                 <li><a class="dropdown-item" href="npc-index/index-npc.html">NPCs</a></li>
-                <li><a class="dropdown-item" href="#">The Keep</a></li>
-                <li><a class="dropdown-item" href="#">Guilds</a></li>
-                <li><a class="dropdown-item" href="#">Maps</a></li>
-                <li><a class="dropdown-item" href="#">Deeper Lore</a></li>
-                <li><a class="dropdown-item" href="#">Notes and Journals</a></li>
+                <li><a class="dropdown-item" href="keep-index/keep-index.html">The Keep</a></li>
+                <li><a class="dropdown-item" href="guilds-index/guilds-index.html">Guilds</a></li>
+                <li><a class="dropdown-item" href="maps-index/maps-index.html">Maps</a></li>
+                <li><a class="dropdown-item" href="deeper-lore-index/dplore-index.html">Deeper Lore</a></li>
+                <li><a class="dropdown-item" href="notes-journals-index/notes-index.html">Notes and Journals</a></li>
               </ul>
             </li>
 
