--- a/deeper-lore-index/dplore-index.html
+++ b/deeper-lore-index/dplore-index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Deeper Lore</a>
+        <a class="navbar-brand" href="#">The Deeper Lore</a>
         <button
           class="navbar-toggler"
           type="button"
