--- a/guilds-index/guilds-index.html
+++ b/guilds-index/guilds-index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Guilds</a>
+        <a class="navbar-brand" href="#">Guilds of the Realms</a>
         <button
           class="navbar-toggler"
           type="button"
