--- a/keep-index/keep-index.html
+++ b/keep-index/keep-index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">The Keep</a>
+        <a class="navbar-brand" href="#">The Keep - Lore & Upgrades</a>
         <button
           class="navbar-toggler"
           type="button"
