--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -19,7 +19,7 @@
 </head>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Known NPCs</a>
+        <a class="navbar-brand" href="#">Friends and Foes</a>
         <button
           class="navbar-toggler"
           type="button"
