--- a/locations-index/locations-index.html
+++ b/locations-index/locations-index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Locations</a>
+        <a class="navbar-brand" href="#">Lands of Legend</a>
         <button
           class="navbar-toggler"
           type="button"
