--- a/maps-index/maps-index.html
+++ b/maps-index/maps-index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Maps of the Realms</a>
+        <a class="navbar-brand" href="#">The Grand Atlas</a>
         <button
           class="navbar-toggler"
           type="button"
