--- a/deeper-lore-index/dplore-index.html
+++ b/deeper-lore-index/dplore-index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <title>Info Hub – Home</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -8,8 +8,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-    crossorigin="anonymous"
-  />
+    crossorigin="anonymous"/>
   <link rel="stylesheet" href="../styles/fonts.css" />
   <link rel="stylesheet" href="../styles/global.css" />
   <link rel="stylesheet" href="../styles/dplore-index.css" />
@@ -20,22 +19,24 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">The Deeper Lore</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="/Vaeloria-Info-Hub/index.html" aria-current="page">Home</a>
+              <a class="nav-link active"
+                  href="/Vaeloria-Info-Hub/index.html"
+                  aria-current="page">Home
+              </a>
             </li>
 
             <li class="nav-item dropdown">
@@ -45,9 +46,7 @@
                 id="loreDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Lore & Features
+                aria-expanded="false">Lore & Features
               </a>
               <ul class="dropdown-menu" aria-labelledby="loreDropdown">
                 <li><a class="dropdown-item" href="../locations-index/locations-index.html">Locations</a></li>
@@ -68,27 +67,127 @@
 
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search Lore..." aria-label="Search" />
-            <button class="btn btn-outline-success" type="submit">Search</button>
+              <button 
+                class="btn btn-outline-success" 
+                type="submit">Search
+              </button>
           </form>
         </div>
       </div>
     </nav>
   </header>
 
-  <main></main>
+  <main>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button 
+            class="accordion-button" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#collapseOne" 
+            aria-expanded="true" 
+            aria-controls="collapseOne">Creation of the Realms
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p>Every world has its beginning. Some tell of gods shaping mountains with their hands, others of stars carved from the bones of dragons. But the truth—<em>our</em> truth—runs deeper. It begins not with form, but with formlessness.</p>
 
-  <footer></footer>
+            <p>This section holds the tale of the First Light: the moment potential stirred and will became word. From the unknowable quiet before time, reality bloomed—not as a single world, but as a great weaving of realms, each born from a thread of something older than matter or meaning.</p>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"
-  ></script>
-  <script src="script.js"></script>
+            <p>In the beginning, there was no light, no dark, no sound. Only the Veil: silent, boundless, and waiting. Then came a breath—not a voice as we know it, but a presence that split the stillness with intention alone. From that first utterance, existence unraveled in waves. Flame danced into being. Seas shivered into motion. Time cracked open the sky. And between these, the foundations of all things were drawn.</p>
+
+            <p>You will not find familiar names here—not yet. This is not the story of heroes or gods, but of forces—raw, ancient, and unshaped. It is the tale of the Pillars, of planes layered like forgotten pages, and of the first spark that set the cosmos alight. It is the whisper before the storm, the echo before language.</p>
+
+            <p>And though creation brought wonder, it also left shadows in its wake. Not all things born from that first breath were meant to be understood. Somewhere, nestled deep within the folds of what came to be, something was hidden. A secret, still pulsing in the quiet places of the world.</p>
+
+            <p>This is not just the creation of the world.
+          <br>
+            It is the origin of possibility.</p>
+
+            <p><a href="creation/creation.html" target="_blank">Enter the story of Ashes of Divinity →</a></p>
+
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button 
+            class="accordion-button collapsed" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#collapseTwo" 
+            aria-expanded="false" 
+            aria-controls="collapseTwo">God's of the Realms
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p>Gods summary story here</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button 
+            class="accordion-button collapsed" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#collapseThree" 
+            aria-expanded="false" 
+            aria-controls="collapseThree">History of the Realms
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            
+            <p>The story of this world is not written in a single tongue, nor etched upon a single stone. It is shaped across seven great eras—each one a turning of the world’s wheel, each one leaving behind echoes that still breathe through the realms today.</p>
+
+            <p>This section is the chronicle of those seven ages. From the first spark of civilization in the Era of Flame to the uneasy calm of the Waning Storm, history here is not merely remembered—it is <em>felt</em>. The rise and fall of empires, the birth of magic, the forging of gods, the sundering of peace—all of it has carved the lands, bent the skies, and scarred the soul of time itself.</p>
+
+            <p>These are not just years. They are legacies.</p>
+
+            <p>In this section, each age is laid bare: its triumphs, its tragedies, and the truths it buried along the way. Together, they form the backbone of the world the players now walk—one built on broken thrones, lost names, and unquiet memories.</p>
+
+            <p><a href="history/history.html" target="_blank">Begin the Chronicle of Ages →</a></p>
+
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button 
+            class="accordion-button collapsed" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#collapseFour" 
+            aria-expanded="false" 
+            aria-controls="collapseFour">Wars of the Realms
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p>Wars summary story here</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous">
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous">
+    </script>
+    <script src="script.js"></script>
+  </main>
 </body>
 </html>
