--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-    crossorigin="anonymous"
-  />
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="styles/fonts.css" />
   <link rel="stylesheet" href="styles/global.css" />
   <link rel="stylesheet" href="styles/root-index.css" />
@@ -27,8 +26,7 @@
           data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -75,7 +73,10 @@
     </nav>
   </header>
 
-  <main></main>
+  <main>
+
+
+  </main>
 
   <footer></footer>
 
