fixed index for crafting

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li><a class="dropdown-item" href="maps-index/maps-index.html">Maps</a></li>
                 <li><a class="dropdown-item" href="deeper-lore-index/dplore-index.html">Deeper Lore</a></li>
                 <li><a class="dropdown-item" href="notes-journals-index/notes-index.html">Notes and Journals</a></li>
+                <li><a class="dropdown-item" href="crafting/crafting-index.html">Crafting</a></li>
               </ul>
             </li>
 
