added links page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="links.html">Links</a>
             </li>
           </ul>
 
