added links to all pages

--- a/links.html
+++ b/links.html
@@ -17,6 +17,28 @@
 <body>
   <main>
 
+      <div class="container">
+    <div class="card">
+      <h2>Main Campaign</h2>
+      <p>Explore the full saga on D&D Beyond, with character sheets, story tracking, and more.</p>
+      <a href="https://www.dndbeyond.com/campaigns/join/60933261102738730" target="_blank" class="link">Enter Campaign</a>
+    </div>
+
+    <div class="card">
+      <h2>One-Shot Adventures</h2>
+      <p>Side quests and experimental tales await. These adventures may be short—but never small.</p>
+      <a href="https://www.dndbeyond.com/campaigns/join/6470530934580071" target="_blank" class="link">Join One Shot Adventures</a>
+    </div>
+
+    <div class="card">
+      <h2>Discord Server</h2>
+      <p>Join the party out of character—discuss lore, plan sessions, share memes, and stay connected.</p>
+      <a href="https://discord.gg/E7cyANYa" target="_blank" class="link">Join Discord</a>
+    </div>
+  </div>
+</body>
+</html>
+
     <footer>
 
     </footer>
