fixed link page

--- a/links.html
+++ b/links.html
@@ -20,13 +20,13 @@
       <div class="container">
     <div class="card">
       <h2>Main Campaign</h2>
-      <p>Explore the full saga on D&D Beyond, with character sheets, story tracking, and more.</p>
+      <p>Explore the full saga at the heart of Vaeloria. Join the main campaigns and step into the story shaping the fate of the realms.</p>
       <a href="https://www.dndbeyond.com/campaigns/join/60933261102738730" target="_blank" class="link">Enter Campaign</a>
     </div>
 
     <div class="card">
       <h2>One-Shot Adventures</h2>
-      <p>Side quests and experimental tales await. These adventures may be short—but never small.</p>
+      <p>Side quests and experimental tales await, in and out of Vaeloria. These adventures may be short—but never small.</p>
       <a href="https://www.dndbeyond.com/campaigns/join/6470530934580071" target="_blank" class="link">Join One Shot Adventures</a>
     </div>
 
