--- a/deeper-lore-index/dplore-index.html
+++ b/deeper-lore-index/dplore-index.html
@@ -57,11 +57,12 @@
                 <li><a class="dropdown-item" href="../maps-index/maps-index.html">Maps</a></li>
                 <li><a class="dropdown-item" href="../deeper-lore-index/dplore-index.html">Deeper Lore</a></li>
                 <li><a class="dropdown-item" href="../notes-journals-index/notes-index.html">Notes and Journals</a></li>
+                <li><a class="dropdown-item" href="../crafting/crafting-index.html">Crafting</a></li>
               </ul>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="../links.html">Links</a>
+              <a class="nav-link" target="_blank" href="../links.html">Links</a>
             </li>
           </ul>
 
@@ -168,7 +169,22 @@
         </h2>
         <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
           <div class="accordion-body">
-            <p>Wars summary story here</p>
+            
+            <p>Some truths are forged in peace.</p>
+
+            <p>Others are beaten into the bones of the world by war.</p>
+
+            <p>This section is not a ledger of battles, nor a recounting of tactics and treaties. It is a remembrance of the moments when blood eclipsed reason—when entire realms were bent, broken, or remade by the weight of conflict. These are not just wars. They are ruptures. Turning points where the balance of the world was shattered, and something unrecognizable emerged in its place.</p>
+
+            <p>Each land has its wounds. In the Ember Desert, a kingdom once vibrant was silenced by flame and betrayal. In the Empire of Tides, unity rose from drowned empires and salt-soaked slaughter. And in the Twilight Isles, even the sun was undone—its rise halted by a scream so powerful it tore time apart.</p>
+
+            <p>Here, you will not find the stories of soldiers. You will find the death of dawn. The sundering of gods. The cost of survival.</p>
+
+            <p>This is not just the memory of war.<br>It is the shape of the world it left behind.</p>
+
+
+            <p><a href="wars/wars-index.html" target="_blank">Read the Book of Broken Blades →</a></p>
+
           </div>
         </div>
       </div>
