--- a/locations-index/locations-index.html
+++ b/locations-index/locations-index.html
@@ -58,11 +58,12 @@
                 <li><a class="dropdown-item" href="../maps-index/maps-index.html">Maps</a></li>
                 <li><a class="dropdown-item" href="../deeper-lore-index/dplore-index.html">Deeper Lore</a></li>
                 <li><a class="dropdown-item" href="../notes-journals-index/notes-index.html">Notes and Journals</a></li>
+                <li><a class="dropdown-item" href="../crafting/crafting-index.html">Crafting</a></li>
               </ul>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="../links.html">Links</a>
+              <a class="nav-link" target="_blank" href="../links.html">Links</a>
             </li>
           </ul>
 
