more seach names added

--- a/deeper-lore-index/history/history.html
+++ b/deeper-lore-index/history/history.html
@@ -15,7 +15,7 @@
 </head>
 
   <body>
-    <h1 class="lore-title">The Chronical of Ages</h1>
+    <h1 class="lore-title">The Chronicle of Ages</h1>
     <h2 class="lore-subtitle">Through the Ages of Vaeloria</h2>
 
 
