--- a/deeper-lore-index/wars/ember-desert/ember-wars.html
+++ b/deeper-lore-index/wars/ember-desert/ember-wars.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
-  <h1 class="lore-title"> The War of the Dead</h1>
+  <h1 class="lore-title" id="war-of-dead"> The War of the Dead</h1>
   <h2 class="lore-subtitle">From Wild to Wasteland</h2>
   <br>
   <section class="war-story">
@@ -157,7 +157,7 @@
 
   </section>
 <hr>
-  <h1 class="lore-title">The Fractured Arcanum</h1>
+  <h1 class="lore-title" id="fractured-arcanum">The Fractured Arcanum</h1>
   <h2 class="lore-subtitle">The Battle for the Heart of the Desert</h2>
   <br>
   <section class="war-story">
