--- a/deeper-lore-index/wars/empire-of-tides/empire-wars.html
+++ b/deeper-lore-index/wars/empire-of-tides/empire-wars.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
-  <h1 class="lore-title">The Red Tide</h1>
+  <h1 class="lore-title" id="red-tide">The Red Tide</h1>
   <h2 class="lore-subtitle">The Waters Before War</h2>
   <br>
   <section class="war-story">
