--- a/deeper-lore-index/wars/ironwood/ironwood-wars.html
+++ b/deeper-lore-index/wars/ironwood/ironwood-wars.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
-  <h1 class="lore-title">The Sundering of the Heavens</h1>
+  <h1 class="lore-title" id="sundering-heavens">The Sundering of the Heavens</h1>
   <h2 class="lore-subtitle">The War That Shattered the Realms</h2>
   <br>
   <section class="war-story">
@@ -114,7 +114,7 @@
 
   </section>
 <hr>
-  <h1 class="lore-title">The War of Chains</h1>
+  <h1 class="lore-title" id="war-of-chains">The War of Chains</h1>
   <h2 class="lore-subtitle">The Rebellion Beneath the Roots</h2>
   <br>
   <section class="war-story">
@@ -227,7 +227,7 @@
 
   </section>
 <hr>
-  <h1 class="lore-title">The Shattered Arcana</h1>
+  <h1 class="lore-title" id="shattered-arcana">The Shattered Arcana</h1>
   <h2 class="lore-subtitle">The War of Wizards</h2>
   <br>
   <section class="war-story">
