--- a/deeper-lore-index/wars/twilight-isles/twilight-wars.html
+++ b/deeper-lore-index/wars/twilight-isles/twilight-wars.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
-  <h1 class="lore-title">The Shadow Fell</h1>
+  <h1 class="lore-title" id="shadow-fell">The Shadow Fell</h1>
   <h2 class="lore-subtitle">The War That Stole the Dawn</h2>
   <br>
   <section class="war-story">
