landing page finished

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 
   <main>
 
+    <section class="landing-hero">
+      <h1>"By decree of the Scholarium of Eldara, access to the Vault of Knowing is now permitted."</h1>
+      <p>All inquiries must be submitted to Archivist Veyr before duskfall.
+      
+      </p>
+    </section>
 
   </main>
 
