--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Vaeloria Info Hub</a>
+        <a class="navbar-brand" href="#">Vault of Knowing</a>
         <button
           class="navbar-toggler"
           type="button"
