background photos added to deeper lore section

--- a/deeper-lore-index/creation/creation.html
+++ b/deeper-lore-index/creation/creation.html
@@ -15,11 +15,14 @@
 </head>
 
   <body>
+    <main>
+    <div class="accordion-section-creation">
+    <div class="title-card">
     <h1 class="lore-title">Ashes of Divinity</h1>
     <h2 class="lore-subtitle">The World Unfolded</h2>
+    </div>
 
-
-    <main>
+    <div>
       <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -178,8 +181,8 @@
     </div>
   </div>
 </div>
-
-    </main>
+</div>
+    
     <footer>
 
     </footer>
@@ -195,5 +198,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../../script.js"></script>
+    </main>
   </body>
 </html>
