--- a/deeper-lore-index/history/history.html
+++ b/deeper-lore-index/history/history.html
@@ -15,11 +15,12 @@
 </head>
 
   <body>
+    <div class="accordion-section-history">
     <h1 class="lore-title">The Chronicle of Ages</h1>
     <h2 class="lore-subtitle">Through the Ages of Vaeloria</h2>
 
 
-    <main>
+    <div>
       <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -334,7 +335,7 @@
     </div>
   </div>
 </div>
-
+</div>
     </main>
     <footer>
 
