--- a/deeper-lore-index/wars/ember-desert/ember-wars.html
+++ b/deeper-lore-index/wars/ember-desert/ember-wars.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
+  <div class="ember-wars">
   <h1 class="lore-title" id="war-of-dead"> The War of the Dead</h1>
   <h2 class="lore-subtitle">From Wild to Wasteland</h2>
   <br>
@@ -273,5 +274,6 @@
 <p>And it waits.</p>
 
   </section>
+  </div>
 </body>
 </html>
