--- a/deeper-lore-index/wars/empire-of-tides/empire-wars.html
+++ b/deeper-lore-index/wars/empire-of-tides/empire-wars.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
+  <div class="empire-wars">
   <h1 class="lore-title" id="red-tide">The Red Tide</h1>
   <h2 class="lore-subtitle">The Waters Before War</h2>
   <br>
@@ -125,5 +126,6 @@
 <p>The Red Tide may be gone, but its shadow lingers in salt and silence. And in time, when greed returns and memory fades, the tide may rise again.</p>
 
   </section>
+  </div>
 </body>
 </html>
