--- a/deeper-lore-index/wars/ironwood/ironwood-wars.html
+++ b/deeper-lore-index/wars/ironwood/ironwood-wars.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
+  <div class="ironwood-wars">
   <h1 class="lore-title" id="sundering-heavens">The Sundering of the Heavens</h1>
   <h2 class="lore-subtitle">The War That Shattered the Realms</h2>
   <br>
@@ -349,5 +350,6 @@
 <p>And wars—wars never truly end.</p>
 
   </section>
+  </div>
 </body>
 </html>
