--- a/deeper-lore-index/wars/twilight-isles/twilight-wars.html
+++ b/deeper-lore-index/wars/twilight-isles/twilight-wars.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../../styles/dplore-index.css" />
 </head>
 <body>
+  <div class="twilight-wars">
   <h1 class="lore-title" id="shadow-fell">The Shadow Fell</h1>
   <h2 class="lore-subtitle">The War That Stole the Dawn</h2>
   <br>
@@ -111,5 +112,6 @@
 <p>This is the legacy of the Shadow Fell. Not a warning. A remembrance.</p>
 
   </section>
+  </div>
 </body>
 </html>
