--- a/deeper-lore-index/wars/wars-index.html
+++ b/deeper-lore-index/wars/wars-index.html
@@ -14,11 +14,14 @@
 </head>
 
   <body>
-    
-    <h1 class="lore-title">Book of Broken Blades</h1>
-    <h2 class="lore-subtitle">A World at War</h2>
-
   <main>
+    <div class="accordion-section-wars">
+      <div class="title-card">
+        <h1 class="lore-title">Book of Broken Blades</h1>
+        <h2 class="lore-subtitle">A World at War</h2>
+      </div>
+  
+    
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header">
@@ -146,6 +149,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     <footer>
 
