npc page picture added

--- a/npc-index/index-npc.html
+++ b/npc-index/index-npc.html
@@ -76,6 +76,7 @@
     </nav>
 
 <body>
+  <div class="npc-section">
   <h1 class="npc-ref-title">NPCs of Vaeloria</h1>
 
 <h2 class="npc-ref-place">Celestial Highlands</h2>
@@ -164,6 +165,7 @@
 </table>
 </div>
 
+
 <h2 class="npc-ref-place">Unknown / Wandering</h2>
 <div class="table-responsive">
 <table class="npc-table">
@@ -173,6 +175,7 @@
   <tr><td><a href="npc-pages/unknown-wandering/malric-gorr.html" target="_blank">Malric &quot;Three-Tooth&quot; Gorr</a></td><td>Pit Fighter</td><td>Orc</td><td>Loves poetry, loud</td></tr>
   <tr><td><a href="npc-pages/unknown-wandering/arvyn-drehl.html" target="_blank">Arvyn Drehl</a></td><td>Ex-Ashen Covenant</td><td>Elf</td><td>Haunted, false name</td></tr>
 </table>
+</div>
 </div>
 </body>
 <script
