added the deep and fixed the search function, as well as added the alchemy page to the search

--- a/the-deep/the-deep-index.html
+++ b/the-deep/the-deep-index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>The Vault of Knowing</title>
+  <title>The Deep</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-    crossorigin="anonymous" />
-  <link rel="stylesheet" href="styles/fonts.css" />
-  <link rel="stylesheet" href="styles/global.css" />
-  <link rel="stylesheet" href="styles/root-index.css" />
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="../styles/fonts.css" />
+  <link rel="stylesheet" href="../styles/global.css" />
+  <link rel="stylesheet" href="../styles/the-deep-index.css" />
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">The Vault of Knowing</a>
+        <a class="navbar-brand" href="#">Into the Deep</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -26,14 +27,15 @@
           data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown"
           aria-expanded="false"
-          aria-label="Toggle navigation">
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#" aria-current="page">Home</a>
+              <a class="nav-link active" href="/The-Vault-of-Knowing/index.html" aria-current="page">Home</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -48,21 +50,21 @@
                 Lore & Features
               </a>
               <ul class="dropdown-menu" aria-labelledby="loreDropdown">
-                <li><a class="dropdown-item" href="locations-index/locations-index.html">Locations</a></li>
-                <li><a class="dropdown-item" href="players-index/players-index.html">Player Characters</a></li>
-                <li><a class="dropdown-item" href="npc-index/index-npc.html">NPCs</a></li>
-                <li><a class="dropdown-item" href="keep-index/keep-index.html">The Keep</a></li>
-                <li><a class="dropdown-item" href="guilds-index/guilds-index.html">Guilds</a></li>
-                <li><a class="dropdown-item" href="maps-index/maps-index.html">Maps</a></li>
-                <li><a class="dropdown-item" href="deeper-lore-index/dplore-index.html">Deeper Lore</a></li>
-                <li><a class="dropdown-item" href="notes-journals-index/notes-index.html">Notes and Journals</a></li>
-                <li><a class="dropdown-item" href="crafting/crafting-index.html">Crafting</a></li>
-                <li><a class="dropdown-item" href="the-deep/the-deep-index.html">The Deep Archives</a></li>
+                <li><a class="dropdown-item" href="../locations-index/locations-index.html">Locations</a></li>
+                <li><a class="dropdown-item" href="../players-index/players-index.html">Player Characters</a></li>
+                <li><a class="dropdown-item" href="../npc-index/index-npc.html">NPCs</a></li>
+                <li><a class="dropdown-item" href="../keep-index/keep-index.html">The Keep</a></li>
+                <li><a class="dropdown-item" href="../guilds-index/guilds-index.html">Guilds</a></li>
+                <li><a class="dropdown-item" href="../maps-index/maps-index.html">Maps</a></li>
+                <li><a class="dropdown-item" href="../deeper-lore-index/dplore-index.html">Deeper Lore</a></li>
+                <li><a class="dropdown-item" href="../notes-journals-index/notes-index.html">Notes and Journals</a></li>
+                <li><a class="dropdown-item" href="../crafting/crafting-index.html">Crafting</a></li>
+                <li><a class="dropdown-item" href="../the-deep/the-deep-index.html">The Deep Archives</a></li>
               </ul>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="links.html">Links</a>
+              <a class="nav-link" target="_blank" href="../links.html">Links</a>
             </li>
           </ul>
 
@@ -77,14 +79,15 @@
 
   <main>
 
-    <section class="landing-hero">
-      <h1>"By decree of the Scholarium of Eldara, access to the Vault of Knowing is now permitted."</h1>
-      <p>All inquiries must be submitted to Archivist Veyr before duskfall.
-      
-      </p>
+    <section class="landing-hero" style="--fx:50%; --fy:45%">
+      <h1>"Per Scholarium Directive 7-A, access to the Deep Archives is hereby prohibited."</h1>
+      <p>Only those bearing sanctioned glyphs or direct writ from the High Curator may proceed beyond this point. Unauthorized entry attempts will be logged, reviewed, and responded to in accordance with Archive Protocol 42-C.</p>
     </section>
 
+
   </main>
+
+  
 
   <footer></footer>
 
@@ -98,6 +101,6 @@
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"
   ></script>
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
