--- a/crafting/crafting-index.html
+++ b/crafting/crafting-index.html
@@ -34,7 +34,7 @@
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
               <a class="nav-link active"
-                  href="/The-Vault-of-Knowing/index.html"
+                  href="/index.html"
                   aria-current="page">Home
               </a>
             </li>
